namespace HomeTrack.Domain.Enum
{
  public enum ModerationStatus
  {
    Pending,
    Approved,
    Reject,
  }

  public enum TagModerationStatus
  {
    Pending,
    Approved,
    Reject,
  }
}